fix(style): language screen spacing, affected by global style

--- a/blocks/form/components/languagepanel/languagepanel.scss
+++ b/blocks/form/components/languagepanel/languagepanel.scss
@@ -7,7 +7,7 @@ main .form form .panel-repeatable-panel__languagepanel {
 }
 
 .field-panel-english-skills {
-  padding: $spacing-600 $spacing-400 120px;
+  padding-bottom: 120px;
 
   // To combat specificity from other style
   [class*='field-wrapper'] {
@@ -20,7 +20,8 @@ main .form form .panel-repeatable-panel__languagepanel {
       padding: 0;
     }
 
-    h3 {
+    h3,
+    h4 {
       padding-bottom: 0;
       margin-bottom: $spacing-400;
 
@@ -55,7 +56,7 @@ main .form form .panel-repeatable-panel__languagepanel {
 }
 
 .field-panel-other-languages {
-  padding: $spacing-600 $spacing-400 120px;
+  padding-bottom: 120px;
 
   [class*='field-wrapper'] {
     p.p-large p {
@@ -133,8 +134,8 @@ main .form form .panel-repeatable-panel__languagepanel {
   .field-languagepanel-options-content {
     .panel-repeatable-panel {
       .field-wrapper {
-        margin-top: $spacing-600;
-        margin-bottom: 0;
+        // margin-top: $spacing-600;
+        margin-bottom: $spacing-600;
       }
 
       [data-repeatable] {
@@ -145,6 +146,7 @@ main .form form .panel-repeatable-panel__languagepanel {
 
       .checkbox-wrapper {
         label {
+          margin-top: 0;
           margin-bottom: 0;
         }
       }
